change the name
dfd

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 						<div class="team_image"><img src="images/team_112.jpg" alt=""></div>
 						<div class="team_body">
 							<div class="team_title"><a href="#">Tasneem Khan</a></div>
-							<div class="team_subtitle">Management</div>
+							<div class="team_subtitle">Manager</div>
 							<div class="social_list">
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -422,7 +422,7 @@
 						<div class="team_image"><img src="images/team_31.jpg" alt=""></div>
 						<div class="team_body">
 							<div class="team_title"><a href="#">Shafqat Khan</a></div>
-							<div class="team_subtitle">Teacher</div>
+							<div class="team_subtitle">Director</div>
 							<div class="social_list">
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
