--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 						<div class="container">
 							<div class="row">
 								<div class="col text-center">
-									<div class="home_slider_title">Welcome to
+									<div class="home_slider_title" color="red">Welcome to
 										Best educations
 										SCHOOL</div>
-									<div class="home_slider_subtitle">Future Of Education</div>
+									<div class="home_slider_subtitle" color="red">Future Of Education</div>
 									<div class="home_slider_form_container">
 									</div>
 								</div>
